@@ -67,6 +67,7 @@ struct flow_action_items {
             struct rte_flow_action_set_ttl ttl;
         } ipv4;
     } set;
+    struct rte_flow_action_raw_encap raw_encap;
     struct rte_flow_action_mark mark;
     struct action_rss_data {
         struct rte_flow_action_rss conf;
