@@ -16,6 +16,7 @@ Post-v2.12.0
      * Add hardware offload support for drop action
      * Add hardware offload support for set MAC actions
      * Add hardware offload support for set IPv4 actions
+     * Add hardware offload support for tunnel push-output actions
 
 v2.12.0 - 03 Sep 2019
 ---------------------
